# Quadcopter-Control-PX4-ROS2

./: README.md  setup.sh
src/offboard_control_srv/: Cargo.toml  package.xml
src/offboard_control_srv/src/: offboard_control_srv.rs
src/px4_ros_com/src/examples/offboard/: offboard_control_srv.cpp
src/px4_ros_com/src/examples/offboard_py/: offboard_control.py
