<package format="3">
  <name>offboard_control_srv</name>
  <version>0.0.0</version>
  <description>TODO: Package description.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration.</license>

  <depend>rclrs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
